--- a/recipes/banoffee/style.css
+++ b/recipes/banoffee/style.css
@@ -3,3 +3,31 @@ body {
   background-size: cover;
   background-position: center bottom;
 }
+
+h1 {
+  text-align: center;
+  font-size: 40px;
+  font-family: "Trebuchet MS";
+}
+
+.pie {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.underimage {
+  background-color: black;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+}
+
+.underimage1 {
+  background-color: black;
+  color: white;
+  font-size: 25px;
+}
+h4 {
+  background-color: white;
+  display: inline;
+}
