--- a/recipes/cheesecake/style.css
+++ b/recipes/cheesecake/style.css
@@ -2,18 +2,47 @@ body {
   background-image: url(cheese.PNG);
   background-size: cover;
 }
+
 h1 {
   text-align: center;
   font-size: 50px;
   font-family: Arial;
   font-weight: 100;
 }
+
 .center-image {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
+
 .image-under {
+  text-align: center;
   color: white;
   background: black;
+  display: table;
+  padding: 5px 10px;
+  margin: 0 auto;
+}
+
+.steps,
+p {
+  background-color: white;
+  display: inline-block;
+  padding: 1px 1px;
+  max-width: 80%;
+  margin: 10px auto;
+}
+
+h3 {
+  background-color: white;
+  display: inline-block;
+}
+
+li {
+  background-color: white;
+  padding: 1px 1px;
+  max-width: 50%;
+  margin: 10px 0;
+  text-align: left;
 }
