--- a/recipes/lasagna/style.css
+++ b/recipes/lasagna/style.css
@@ -3,3 +3,46 @@ body {
   background-size: cover;
   background-position: center;
 }
+h1 {
+  font-family: "Courier New";
+  text-align: center;
+  font-size: 50px;
+}
+
+.lasagneonaplate {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+h3 {
+  font-size: 40px;
+  color: white;
+}
+p {
+  color: white;
+  background-color: black;
+  display: inline-block;
+  padding: 2px 5px;
+  margin: 0;
+}
+h4 {
+  background-color: white;
+  color: black;
+  font-size: 30px;
+  display: inline-block;
+  padding: 0 5px;
+}
+li {
+  background-color: white;
+  padding: 2px 5px;
+  margin: 0;
+  display: table;
+}
+
+h2 {
+  background-color: white;
+  color: black;
+  font-size: 30px;
+  display: inline-block;
+  padding: 0 5px;
+}
